[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "grpcio-tools",
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "Beamline Engineering Automation Management Systems (Behavior Trees)"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "beams"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "beams*",]
namespaces = false

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE"

[project.scripts]
"beams" = "beams.bin.main:main"

[tool.setuptools_scm]
write_to = "beams/_version.py"

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.gui]
file = "gui-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.test]
file = ["dev-requirements.txt", "gui-requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.pytest.ini_options]
addopts = "--cov=."
markers = [
    "flaky: register this mark to avoid pytest warnings (comes from caproto -> pytest-rerunfailures)",
]
